name:                jamiis-github-io
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/jamiis/jamiis-github-io#readme
license:             BSD3
license-file:        LICENSE
author:              Jamis Johnson
maintainer:          jamismanwaring@gmail.com
copyright:           2016 Jamis Johnson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable jamiis-github-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , hakyll == 4.7.*
                     , pandoc == 1.15.2.*
                     , containers == 0.5.6.2
